force-app/main/default/objects/Activity/fields/Item_Codes__c.field-meta.xml
<CustomField>
    <fullName>Item_Codes__c</fullName>
    <inlineHelpText>Mail House item codes for fulfilment at Paragon</inlineHelpText>
    <label>Item Codes</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mailhouse_items__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCC-13738 Price Guide</fullName>
                <label>CCC-13738</label>
            </value>
            <value>
                <fullName>CCC-13024 Enquiry Pack (Membership)</fullName>
                <label>CCC-13024</label>
            </value>
            <value>
                <fullName>CCC-13576  Window Stickers</fullName>
                <label>CCC-13576</label>
            </value>
            <value>
                <fullName>CCC-13737 siteseeker update book</fullName>
                <label>CCC-13737</label>
            </value>
            <value>
                <fullName>CCC-13830 Siteseeker Directory</fullName>
                <label>CCC-13830</label>
            </value>
            <value>
                <fullName>CCC-13563 Siteseeker Map</fullName>
                <label>CCC-13563</label>
            </value>
            <value>
                <fullName>CCC-13971 May Out &amp; About supplement</fullName>
                <label>CCC-13971</label>
            </value>
            <value>
                <fullName>CCC-13970 May Replacement Magazine</fullName>
                <label>CCC-13970</label>
            </value>
            <value>
                <fullName>CCC-13565 Bookmark</fullName>
                <label>CCC-13565</label>
            </value>
            <value>
                <fullName>CCC-13206 Self-catering Brochure</fullName>
                <isActive>false</isActive>
                <label>CCC-13206</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>