force-app/main/default/objects/Activity/fields/Mailhouse_items__c.field-meta.xml
<CustomField>
    <fullName>Mailhouse_items__c</fullName>
    <inlineHelpText>requested items for fulfilment by Paragon - choose item code</inlineHelpText>
    <label>Mailhouse items</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bookmark</fullName>
            </value>
            <value>
                <fullName>Enquiry Pack</fullName>
            </value>
            <value>
                <fullName>Out &amp; About</fullName>
            </value>
            <value>
                <fullName>Price Guide</fullName>
            </value>
            <value>
                <fullName>Replacement Magazine</fullName>
            </value>
            <value>
                <fullName>Self Catering Brochure</fullName>
            </value>
            <value>
                <fullName>SS Directory</fullName>
            </value>
            <value>
                <fullName>SS Map</fullName>
            </value>
            <value>
                <fullName>SS Update</fullName>
            </value>
            <value>
                <fullName>Window Sticker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>