force-app/main/default/objects/Activity/fields/Sum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Sum_Quantity__c</fullName>
    <description>How many Mail house items does the Member require?</description>
    <label>Sum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>